# calendar-helper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  utils.py
notebooks/: analyze_calendars.ipynb
source/: utils.py
