[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-core>=1.24.1",
    "google-api-python-client>=1.12.8",
    "google-auth-httplib2>=0.0.4",
    "google-auth>=1.24.0",
    "google-auth-oauthlib>=0.4.2",
    "googleapis-common-protos>=1.52.0",
    "httplib2>=0.18.1",
    "idna>=2.10",
    "oauthlib>=3.1.0",
    "requests>=2.25.1",
    "requests-oauthlib>=1.3.0",
    "urllib3>=1.26.2",
    "jupyterlab>=3.0.1",
    "numpy>=1.19.5",
    "matplotlib>=3.3.3",
    "pandas>=1.1.5",
    "seaborn>=0.11.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["source*"]
exclude = ["notebooks*"]
